--- a/sample code.html
+++ b/sample code.html
@@ -17,7 +17,7 @@
             <def title="example">exp</def>
             <a href="https://www.codeproject.com/Questions/265497/how-to-divide-web-page-in-2-vertical-columns" target="_parent">click here to move</a>
             <marquee>Ad is transfer by the main branch</marquee><br>
-            <marquee>kaushik sanjay kavin kavinkumar </marquee>
+            <marquee>kaushik kavin kavinkumar </marquee>
             <kbd>ctrl</kbd>+<kbd>c</kbd>= copy<br><br>
             output of the program<samp>10:11</samp><br>
             <a href="mailto: kaushik.here252@gmail.com">send mail</a>
@@ -34,7 +34,71 @@
                 comes under for 
                 action control
             </code>
-            </p>
+            <audio>
+                <source src="" type="audio/mpeg">
+            </audio>
+            <video width="1000px" controls>
+                <source src="F:\ooty\VID_20230516_090857.mp4" type="video/mp4">
+            </video><br><br><br><br>
+            <form action="">
+                <label for="">First name</label>
+                <input type="text"><br><br>
+                <label for="">Last name</label>
+                <input type="text"><br><br>
+                <label for="">age</label>
+                <input type="number" name="age" id=""><br><br>
+                <label for="">gender:</label>
+                male<input type="radio" name="gender" id="male"><br><br>
+                <input type="radio" name="gender" id="female">female<br><br>
+                <label for="">password</label>
+                <input type="password" autocomplete="off" ><br><br>
+                <label for="">address</label>
+                <textarea type="text" placeholder="type the comment here" cols="30" rows="8"></textarea><br><br><br>
+                <label for="">Hobbies</label><br><br>
+                <input type="checkbox" name="Hobbies" id="cricket">cricket <br>
+                <input type="checkbox" name="Hobbies" id="football">football <br>
+                <input type="checkbox" name="Hobbies" id="tennis">tennis<br>
+                <input type="checkbox" name="Hobbies" id="kabaddi">kabaddi <br>
+                <input type="checkbox" name="Hobbies" id="carrom">carrom <br><br><br>
+                <label for="">city</label>
+                <select name="city" id="city" multiple="5">
+                    <option value="tiruchengode" fixed>tiruchengode</option>
+                    <option value="erode">erode</option>
+                    <option value="main">main</option>
+                    <option value="run">run</option>
+                    <option value="got">got</option>
+                    <option value="form">form</option>
+                </select> <br><br>
+                <fieldset>
+                    <legend style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><b>input tag types</b></legend>
+                <input type="button" value="submit the form by clicking here"> <br><br><br><br>
+                <input type="file"><br></br>
+                <input type="date" ><br></br>
+                <input type="time"><br></br>
+                <input type="text" autofocus required><br></br>
+                <input type="button" value="submit">
+            </fieldset>
+            <input list="browser">
+            <datalist id="browser">
+                <option value="web edge">web edge</option>
+                <option value="microsoft">microsoft</option>
+                <option value="chrome">chrome</option>
+                <option value="fire fox">firefox</option>
+                <option value="net">net</option>
+            </datalist> <br></br>
+            </form><br></br>
+        </p>
+        <figure>
+            <img src="D:\Task 1\IMAGES\DELIVERY.avif" alt="image"><br><br><br><br>
+            <figcaption>file  shows the delivery image
+             </figcaption>
+            </figure>
+            <iframe src="D:\Task 1\HTML\Main page.html" name="frame 1" padding="20px"></iframe>
+            <a href="D:\Task 1\HTML\Idly.html" target="_self">click here</a>
+            <a href=""></a>
+            <iframe src="D:\Task 1\HTML\Chicken.html" frameborder="0" width="500" height="500"></iframe>
+            <iframe src="D:\Task 1\HTML\dosa.html" frameborder="0">youtube link</iframe>
+
     </body>
 </html> 
     
